--- a/WorkOut.html
+++ b/WorkOut.html
@@ -35,7 +35,7 @@
 	  		</button>
 	  		<div class="collapse navbar-collapse" id="collapsibleNavbar">
 				<ul class="navbar-nav mx-auto">
-					<li class="nav-item"><a class="nav-link"  href="Home.html" style="width:110px; text-align: center;">HOME</a></li>
+					<li class="nav-item"><a class="nav-link"  href="Index.html" style="width:110px; text-align: center;">Home</a></li>
 					<li class="nav-item"><a class="nav-link"  href="Weight-Loss.html" style="width: 160px; text-align: center;">WEIGHT LOSS</a></li>
 					<li class="nav-item"><a class="nav-link"  href="WeightGain.html" style="width:160px; text-align:center;">WEIGHT GAIN</a></li>
 					<li class="nav-item active" style="border-bottom:3px solid #77b300;font-size:17px;"><a class="nav-link"  href="WorkOut.html" style="width:130px; text-align:center;">WORKOUT</a></li>
