--- a/WeightLoss.html
+++ b/WeightLoss.html
@@ -54,7 +54,7 @@
 	  		</button>
 	  		<div class="collapse navbar-collapse" id="collapsibleNavbar">
 				<ul class="navbar-nav mx-auto">
-				<li class="nav-item active" style="border-bottom:2px solid green;font-size:17px"><a class="nav-link" style="width:120px;text-align:center;">HOME</a></li>
+				<li class="nav-item active" style="border-bottom:2px solid green;font-size:17px"><a class="nav-link" style="width:120px;text-align:center;">Home</a></li>
 				<li class="nav-item active"><a class="nav-link"style="width:160px;text-align:center;">WEIGHT-LOSS</a></li>
 				<li class="nav-item active"><a class="nav-link"style="width:130px;text-align:center;">WEIGHT-GAIN</a></li>
 				<li class="nav-item active"><a class="nav-link"style="width:120px;text-align:center;">WORKOUT</a></li>
